registro de usuario de principio a fin

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -44,7 +44,7 @@
                             </div>
                             
                             <h:commandButton value="Ingresar" class="btn btn-block py-2 botonIngresoLogin" action="#{loginControlador.autenticar()}"></h:commandButton> 
-                            <h:outputLabel value="#{loginControlador.error}"/>
+                            <h:outputLabel class="text-danger mt-2" value="#{loginControlador.error}"/>
                             <hr></hr>
                             <h5 align="center" class="pt-3">¿Aún no te has registrado?</h5>
                             
