Funcionalidad de bodega agregado

--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div id="top-bar" class="col-md-9">
                         <ul>
-                            <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="cesar@empresaAP.com">cesar@empresaAP.com</a></li>
+                            <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="contacto@empresaAP.com">cesar@empresaAP.com</a></li>
                             <li><i class="fa fa-phone"></i> +506 1111 1111</li>
                             <li><i class="fa fa-calendar"></i> Lunes-Viernes 7am - 4pm</li>
                         </ul>
