--- a/web/MantenimientoProducto.xhtml
+++ b/web/MantenimientoProducto.xhtml
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Mantenimiento de Productos</title>
         <!-- Bootstrap-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"></link>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/napm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"></link>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -83,29 +83,24 @@
              <div class="row">
                  <div class="col-md-8">
                      <h:form>
-                         <p:dataTable var="producto" value="#{beanProducto.listaP}">
+                         <p:dataTable var="producto" value="#{beanProducto.listaP}" scrollable="true" scrollWidth="99%" scrollHeight="300">
                             <f:facet name="header">Mis Productos</f:facet>
                             <p:column headerText="Foto">
-                                <h:graphicImage value="/IMAGES/BANNER_NUEVO/bamboo-watch.jpg" style="max-width: 50%"></h:graphicImage>
+                                <h:graphicImage value="#{producto.imagen}" style="max-width: 100%"></h:graphicImage>
                             </p:column>
                             <p:column headerText="Nombre">
                                 #{producto.nombre}
                             </p:column>
-                            <p:column headerText="En stock">
-                                #{producto.cantidad}
-                            </p:column>
                              <p:column headerText="Descripcion">
                                 #{producto.descripcion}
                             </p:column>
+                            <p:column headerText="En stock">
+                                #{producto.cantidad}
+                            </p:column>          
                             <p:column headerText="Cant.Mínima">
                                 #{producto.minimo}
                             </p:column>
-                             <p:column headerText="Precio">
-                                #{producto.precio}
-                            </p:column>
-                            <p:column headerText="Link">
-                                <h:commandLink value="Detalle" action="#{beanProducto.detalle(producto)}" style="color: black"></h:commandLink>
-                            </p:column>
+                             
                             //more columns
                             <f:facet name="footer">
                                 In total there are cars.
