--- a/web/FormRegistroC.xhtml
+++ b/web/FormRegistroC.xhtml
@@ -99,7 +99,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="Barrio"> Otras señas</label>
+                                        <label for="OtrasSenas"> Otras señas</label>
                                         <br></br>
                                         <h:inputTextarea cols="30" value="#{beanRegistroC.otrasSenas}"></h:inputTextarea>
                                     </div>
