--- a/web/Reportes.xhtml
+++ b/web/Reportes.xhtml
@@ -70,7 +70,7 @@
                         <a class="nav-item nav-link active" href="ListaProducto.xhtml">Producto<span class="sr-only">(current)</span></a>
                     </div>
                 </div>
-                <h:outputText style="font-size: 25px; color: white;" value="#{beanPedido.objPedido.listaProductos.size()}"/>
+                <h:outputText style="font-size: 25px; color: white;" value="#{beanFactura.objPedido.listaProductos.size()}"/>
                 <h:form>
                     <h:commandButton image="IMAGES/ICONS/carrito-de-compras_1.png" action="CarritoCompras.xhtml"/>
                 </h:form>
