--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <h:outputText style="font-size: 25px; color: white;" value="#{beanPedido.objPedido.listaProductos.size()}"/>
+            <h:outputText style="font-size: 25px; color: white;" value="#{beanFactura.objPedido.listaProductos.size()}"/>
             <h:form>
                 <h:commandButton image="IMAGES/ICONS/carrito-de-compras_1.png" action="CarritoCompras.xhtml"/>
             </h:form>
