--- a/web/HistorialPedido.xhtml
+++ b/web/HistorialPedido.xhtml
@@ -80,7 +80,7 @@
         <!--Comienzo del body-->
         <section class="py-4">
             <div class="container">
-                <div class="row">
+                <div class="row" id="mainBox">
                      <div class="card">
                             <h5 class="p-mt-0">Historial de pedidos</h5>
                             <p:tabView>
