--- a/web/ListaProducto.xhtml
+++ b/web/ListaProducto.xhtml
@@ -87,7 +87,7 @@
         <!--Comienzo del body-->
         <section>
             <div class="container">
-                <div class="row">
+                <div class="row" id="mainBox">
                     <h:form>
                         <p:dataTable var="car" value="#{beanProducto.listaP}">
                             <f:facet name="header">Lista de Productos</f:facet>
