--- a/web/PrincipalBodega.xhtml
+++ b/web/PrincipalBodega.xhtml
@@ -142,7 +142,7 @@
         <!--Comienzo del body-->
         <section>
             <div class="container">
-                <div class="row">
+                <div class="row" id="mainBox">
                     <p:tabView>
                                 <p:tab title="Facturas Pandientes con Envío Directo">
                                     <div class="card">
