--- a/web/Reportes.xhtml
+++ b/web/Reportes.xhtml
@@ -80,28 +80,10 @@
         <!--Comienzo del body-->
         <section class="py-4">
             <div class="container">
-                <div class="row">
+                <div class="row" id="mainBox">
                      <div class="card">
                             <h5 class="p-mt-0">Reportes</h5>
                             <p:tabView>
-                                <p:tab title="Facturas En Proceso">
-                                    <div class="card">
-                                    <h:form>
-                                        <p:dataTable var="factura" value="#{beanReporte.listaEnProceso}">
-                                            <p:column headerText="Codigo factura" groupRow="true">
-                                                <h:outputText value="#{factura.id}"/>
-                                            </p:column>
-                                            <p:column headerText="Cliente">
-                                                <h:outputText value="#{factura.cliente.nombre}"/>
-                                            </p:column>
-                                            <p:column headerText="Productos">
-                                                <h:inputTextarea style="width:100%" value="#{beanReporte.obtenerListaProductos(factura.pedido.listaProductos)}"/>
-                                            </p:column>
-                                        </p:dataTable>
-                                    </h:form>
-                                </div>
-
-                                </p:tab>
                                 <p:tab title="Facturas Finalizadas">
                                     <div class="card">
                                     <h:form>
