--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -95,7 +95,7 @@
                                     <div class="container h-100">
                                         <div class="row d-flex h-100 justify-content-center align-items-center">
                                             <div class="frase-saludo">
-                                                <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                                <h1 class="text-uppercase">¡Bienvenido <strong>Usuario!</strong></h1>
                                             </div>
                                         </div>
                                     </div>
@@ -109,7 +109,7 @@
                                     <div class="container h-100">
                                         <div class="row d-flex h-100 justify-content-center align-items-center">
                                             <div class="frase-saludo">
-                                                <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                                <h1 class="text-uppercase">¡Gracias por <strong>preferirnos!</strong></h1>
                                             </div>
                                         </div>
                                     </div>
@@ -123,7 +123,7 @@
                                     <div class="container h-100">
                                         <div class="row d-flex h-100 justify-content-center align-items-center">
                                             <div class="frase-saludo">
-                                                <h1 class="text-uppercase">¡En <strong>desarrollo!</strong></h1>
+                                                <h1 class="text-uppercase">¡Nuevos <strong>Productos!</strong></h1>
                                             </div>
                                         </div>
                                     </div>
@@ -159,47 +159,47 @@
             <div class="row flex">
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/sBvouTuXoAE" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/brownies.jpg" class="img-thumbnail" style="width: 100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/VQYxQiiRky0" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/cajaDonasSurtidas.jpg" class="img-thumbnail" style="width: 100%" ></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/gJFvHkUHdSI" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/cerealNesquikChocolate.jpeg" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/Bjw6dbIYtNE" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/cerealFrootLoops.jpg" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/C52dylsC1-g" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/cheerios.jpg" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/wsMwDxF8SKA" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/papasLaysClassic.jpg" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/sfze-8LfCXI" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/Picaritas.jpeg" class="img-thumbnail"  width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/8oydDuX4AAM" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/jaleaPinniaJellyKings.jpg" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-2 mt-2">
                     <div class="thumbnail">
-                        <img src="https://source.unsplash.com/PN_c3RKCVlA" class="img-thumbnail"></img>
+                        <img src="IMAGES/PRODUCTOS/meneitos.png" class="img-thumbnail" width="100%"></img>
                     </div>
                 </div>
             </div>
