--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -43,7 +43,7 @@
                                 <span class="ml-auto"><a href="#" >Olvidé mi contraseña</a></span> 
                             </div>
                             
-                            <h:commandButton value="Ingresar" class="btn btn-block py-2 botonIngresoLogin" action="#{loginControlador.autenticar()}"></h:commandButton> 
+                            <h:commandButton value="Ingresar" class="btn btn-block py-2 botonIngresoLogin" action="#{loginControlador.autenticar()}" actionListener="#{beanFactura.limpiar()}"></h:commandButton> 
                             <h:outputLabel class="text-danger mt-2" value="#{loginControlador.error}"/>
                             <hr></hr>
                             <h5 align="center" class="pt-3">¿Aún no te has registrado?</h5>
