--- a/web/Reportes.xhtml
+++ b/web/Reportes.xhtml
@@ -8,7 +8,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Reportes</title>
-        
+
         <!-- Bootstrap-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"></link>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
@@ -17,32 +17,32 @@
               integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"></link>
         <!-- JS, Popper.js, and jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-            crossorigin="anonymous"></script>
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
         <script name="jquery/jquery.js" library="primefaces"></script>
         <link rel="stylesheet" href="CSS/estilosPrincipal.css"></link>
     </h:head>
     <h:body>
         <header class="header">
-        <div class="container header">
-            <div class="row">
-                <div id="top-bar" class="col-md-9">
-                    <ul>
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="contacto@empresaAP.com">contacto@empresaAP.com</a></li>
-                        <li><i class="fa fa-phone"></i> +506 1111 1111</li>
-                        <li><i class="fa fa-calendar"></i> Lunes-Viernes 7am - 4pm</li>
-                    </ul>
-                </div>
-                <div id="top-bar-center" class="col-md-3">
-                    <h:form>
+            <div class="container header">
+                <div class="row">
+                    <div id="top-bar" class="col-md-9">
+                        <ul>
+                            <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="contacto@empresaAP.com">contacto@empresaAP.com</a></li>
+                            <li><i class="fa fa-phone"></i> +506 1111 1111</li>
+                            <li><i class="fa fa-calendar"></i> Lunes-Viernes 7am - 4pm</li>
+                        </ul>
+                    </div>
+                    <div id="top-bar-center" class="col-md-3">
+                        <h:form>
                             <p:menubar>
-                                   <p:submenu label="#{beanUsuario.usuario.nombre}">
+                                <p:submenu label="#{beanUsuario.usuario.nombre}">
                                     <p:menuitem value="#{beanUsuario.etiquetaOpciones(1)}" outcome="#{beanUsuario.linkOpciones(1)}"></p:menuitem>
                                     <p:separator/>
                                     <p:menuitem value="#{beanUsuario.etiquetaOpciones(2)}" outcome="#{beanUsuario.linkOpciones(2)}"></p:menuitem>
@@ -50,13 +50,13 @@
                                     <p:menuitem value="#{beanUsuario.etiquetaOpciones(3)}" outcome="#{beanUsuario.linkOpciones(3)}"></p:menuitem>
                                 </p:submenu>
                             </p:menubar>
-                    </h:form>
+                        </h:form>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
         <!-- Comienzo del topbar-->
-        
+
         <!-- Fin del topbar-->
         <!--Comienzo del header-->
         <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
@@ -75,17 +75,61 @@
                     <h:commandButton image="IMAGES/ICONS/carrito-de-compras_1.png" action="CarritoCompras.xhtml"/>
                 </h:form>
             </div>
-         </nav>
+        </nav>
         <!--Fin del header-->
         <!--Comienzo del body-->
         <section class="py-4">
             <div class="container">
                 <div class="row" id="mainBox">
-                     <div class="card">
-                            <h5 class="p-mt-0">Reportes</h5>
-                            <p:tabView>
-                                <p:tab title="Facturas Finalizadas">
-                                    <div class="card">
+                    <div class="card">
+                        <h5 class="p-mt-0">Reportes</h5>
+                        <p:tabView>
+                            <p:tab title="Solicitudes">
+                                <div class="card">
+                                    <h:form>
+                                        <p:dataTable var="solicitud" value="#{beanUsuario.usuariosEspera()}">
+                                            <p:column headerText="Cédula" groupRow="true">
+                                                <h:outputText value="#{solicitud.cedula}"/>
+                                            </p:column>
+                                            <p:column headerText="Nombre">
+                                                <h:outputText value="#{solicitud.nombre}"/>
+                                            </p:column>
+                                            <p:column headerText="Correo">
+                                                <h:outputText value="#{solicitud.correoID}"/>
+                                            </p:column>
+                                            <p:column headerText="Acciones">
+                                                <h:commandButton image="IMAGES/ICONS/check.png" actionListener="#{beanUsuario.aceptarUsuario(solicitud.correoID)}"></h:commandButton>
+
+                                                <h:commandButton image="IMAGES/ICONS/borrar.png" actionListener="#{beanUsuario.denegarUsuario(solicitud.correoID)}"></h:commandButton>
+
+                                            </p:column>
+                                        </p:dataTable>
+                                    </h:form>
+                                </div>
+                            </p:tab>
+                            <p:tab title="Solicitudes Negadas">
+                                <div class="card">
+                                    <h:form>
+                                        <p:dataTable var="solicitud" value="#{beanUsuario.usuariosDenegados()}">
+                                            <p:column headerText="Cédula" groupRow="true">
+                                                <h:outputText value="#{solicitud.cedula}"/>
+                                            </p:column>
+                                            <p:column headerText="Nombre">
+                                                <h:outputText value="#{solicitud.nombre}"/>
+                                            </p:column>
+                                            <p:column headerText="Correo">
+                                                <h:outputText value="#{solicitud.correoID}"/>
+                                            </p:column>
+                                            <p:column headerText="Acciones">
+                                                <h:commandButton image="IMAGES/ICONS/check.png" actionListener="#{beanUsuario.aceptarUsuario(solicitud.correoID)}"></h:commandButton>
+
+                                            </p:column>
+                                        </p:dataTable>
+                                    </h:form>
+                                </div>
+                            </p:tab>
+                            <p:tab title="Facturas Finalizadas">
+                                <div class="card">
                                     <h:form>
                                         <p:dataTable var="factura" value="#{beanReporte.listaEntregada}">
                                             <p:column headerText="Codigo factura" groupRow="true">
@@ -100,9 +144,9 @@
                                         </p:dataTable>
                                     </h:form>
                                 </div>
-                                </p:tab>
-                                <p:tab title="Facturas Pendientes">
-                                    <div class="card">
+                            </p:tab>
+                            <p:tab title="Facturas Pendientes">
+                                <div class="card">
                                     <h:form>
                                         <p:dataTable var="factura" value="#{beanReporte.listaPendiente}">
                                             <p:column headerText="Codigo factura" groupRow="true">
@@ -117,9 +161,9 @@
                                         </p:dataTable>
                                     </h:form>
                                 </div>
-                                </p:tab>
-                                <p:tab title="Facturas al contado">
-                                    <div class="card">
+                            </p:tab>
+                            <p:tab title="Facturas Contado">
+                                <div class="card">
                                     <h:form>
                                         <p:dataTable var="factura" value="#{beanReporte.listaContado}">
                                             <p:column headerText="Codigo factura" groupRow="true">
@@ -134,9 +178,9 @@
                                         </p:dataTable>
                                     </h:form>
                                 </div>
-                                </p:tab>
-                                <p:tab title="Facturas credito">
-                                    <div class="card">
+                            </p:tab>
+                            <p:tab title="Facturas credito">
+                                <div class="card">
                                     <h:form>
                                         <p:dataTable var="factura" value="#{beanReporte.listaCredito}">
                                             <p:column headerText="Codigo factura" groupRow="true">
@@ -151,19 +195,19 @@
                                         </p:dataTable>
                                     </h:form>
                                 </div>
-                                </p:tab>
-                            </p:tabView>
-                        </div>
+                            </p:tab>
+                        </p:tabView>
+                    </div>
                 </div>
             </div>
         </section>
         <!--Fin del body-->
         <!--Comienzo footer-->
-    <div class="container-fluid pie-pagina">
-        <div class="container">
-            <div class="row justify-content-center text-center">© 2021 Revenger Inc.</div>
+        <div class="container-fluid pie-pagina">
+            <div class="container">
+                <div class="row justify-content-center text-center">© 2021 Revenger Inc.</div>
+            </div>
         </div>
-    </div>
         <!--Fin footer-->
     </h:body>
 </html>
