--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -48,6 +48,8 @@
                                     <p:menuitem value="#{beanUsuario.etiquetaOpciones(2)}" outcome="#{beanUsuario.linkOpciones(2)}"></p:menuitem>
                                     <p:separator/>
                                     <p:menuitem value="#{beanUsuario.etiquetaOpciones(3)}" outcome="#{beanUsuario.linkOpciones(3)}"></p:menuitem>
+                                    <p:separator/>
+                   
                                 </p:submenu>
                             </p:menubar>
                         </h:form>
