--- a/web/Reportes.xhtml
+++ b/web/Reportes.xhtml
@@ -199,6 +199,10 @@
                         </p:tabView>
                     </div>
                 </div>
+                <div class="text-center">
+                    <a href="MantenimientoProducto.xhtml">Ver Mantenimiento de Producto</a>
+     
+                </div>
             </div>
         </section>
         <!--Fin del body-->
